Spacing fix.

--- a/css/app.css
+++ b/css/app.css
@@ -5,10 +5,19 @@
   src: url('Muller-ExtraBold.otf');
 }
 
+@font-face {
+  font-family: 'Brela';
+  src: url('brelarefular.otf');
+}
+
+body {
+  /*font-family: 'Lora', serif;*/
+}
+
 
 section { 
   width: 100%;
-  padding: 2em;
+  padding: .625rem;
   margin: 0 auto;
 }
 
@@ -56,6 +65,7 @@ img {
   position: absolute;
   right: 2rem;
   top: 1rem;
+  font-size: 0.82rem
 }
 
 .top-bar .pricing {
@@ -109,7 +119,8 @@ ol, ul {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Muller','Georgia',sans-serif;
+/*  font-family: 'Alegreya Sans','Georgia', sans-serif;
+  font-weight: 800;*/
 }
 
 .float-none {
@@ -146,12 +157,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .circle p {
-  margin-top: 39%;
+  margin-top: 36%;
   font-size: 1.85rem;
 }
 
+.opening-headline {
+  margin-top: 3.14rem;
+}
+
 .convert-to-code-tagline {
-  margin-top: 3rem;
+  margin-top: 1.62rem;
   margin-bottom: 2rem;
 }
 
@@ -166,6 +181,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 /* Medium and up */
 @media screen and (min-width: 40em) {
+
+
+  section { 
+    padding: 1.625rem;
+  }
+
     .circle {
 
   width: 20rem;
